methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  for (nb <- 1 to 4) {
          ^